--- a/stylesheet main.css
+++ b/stylesheet main.css
@@ -14,6 +14,15 @@
         bottom: 10px;
         float: right;
     }
+
+    .center {
+        margin: auto;
+        width: 50%;
+        border-style: groove;
+        border-color: silver;
+        padding: 30px;
+        background-color: white;
+    }
     
     .clear{
         clear: left;
