--- a/stylesheet main.css
+++ b/stylesheet main.css
@@ -4,6 +4,8 @@
     }
     footer{
         background-color: lightgrey;
+		overflow: auto;
+		clear: both;
     }
     img{
         height: 64px;
@@ -35,8 +37,13 @@
         top: 2%;
         right: 3%;
     }
-    .contact{
-        position: absolute;
-        bottom: -160px;
-        right: 10px;
-    }
+
+	.alignleft{
+		float: left;
+		background-color: lightgrey;
+	}
+
+	.alignright{
+		float: right;
+		background-color: lightgrey;
+	}
