--- a/main.css
+++ b/main.css
@@ -14,52 +14,23 @@ img{
 address{
 	float: right;
 }
-
-.dropdown {
-    position: relative;
-    display: inline-block;
-}
-
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: lightgrey;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    padding: 12px 16px;
-    z-index: 1;
-}
-
-.dropdown:hover .dropdown-content {
-    display: block;
-}
-
 ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
-    width: 200px;
+    width: 175px;
     background-color: lightgrey;
 }
-
 li a {
     display: block;
-    color: #000;
-    padding: 8px 16px;
-    text-decoration: none;
+    color: black;
+    padding: 20px 50px;
+    text-decoration: none; /* remove underline*/
 }
-
-/* Change the link color on hover */
 li a:hover {
-    background-color: #555;
+    background-color: grey;
     color: white;
 }
-
-
-
-
-
-
 .clear{
 	clear: left;
 }
@@ -79,4 +50,21 @@ li a:hover {
 .alignright{
 	float: right;
 	background-color: lightgrey;
+}
+.menu {
+    position: relative;
+    display: inline-block;
+}
+
+.dropmenu {
+    display: none;
+    position: absolute;
+    background-color: lightgrey;
+    padding: 5px;
+    border-radius: 10px;
+    border: 2px solid grey;
+}
+
+.menu:hover .dropmenu {
+    display: block;
 }
