Page 2 HTML and CSS

--- a/page1-css.css
+++ b/page1-css.css
@@ -16,6 +16,6 @@
 }
 
 .classBody{
-	background-image: url(teardown.jpg);
+	background-image: url(totaltech1920x600.jpg);
 	background-repeat: repeat-y;
 }
