--- a/main.css
+++ b/main.css
@@ -1,18 +1,18 @@
 header{
-	 background-color: lightgrey;
+     background-color: lightgrey;
 }
 footer{
-	background-color: lightgrey;
-	overflow: auto;
-	clear: both;
+    background-color: lightgrey;
+    overflow: auto;
+    clear: both;
 }
 img{
-	height: 64px;
-	width: 64px;
-	float: left;
+    height: 64px;
+    width: 64px;
+    float: left;
 }
 address{
-	float: right;
+    float: right;
 }
 ul {
     list-style-type: none;
@@ -32,24 +32,24 @@ li a:hover {
     color: white;
 }
 .clear{
-	clear: both;
+    clear: left;
 }
 .at{
-	position: absolute;
-	left: 0%;
+    position: absolute;
+    left: 0%;
 }
 .search{
-	position: absolute;
-	top: 2%;
-	right: 3%;
+    position: absolute;
+    top: 2%;
+    right: 3%;
 }
 .alignleft{
-	float: left;
-	background-color: lightgrey;
+    float: left;
+    background-color: lightgrey;
 }
 .alignright{
-	float: right;
-	background-color: lightgrey;
+    float: right;
+    background-color: lightgrey;
 }
 .menu {
     position: relative;
